    TODO: Overhaul very old and in many respects out of date documentation
    TODO: New high res images for documentation
    TODO: File watching still broken for script path
    TODO: Test UTI stuff
    TODO: Fix "Create app on script file change" feature
    TODO: Long GNU named params for command line tool, e.g. --some-option
    TODO: Add example showing STATUSMENUICON: syntax in action
    TODO: Add documentation for ALERT:Title|Info syntax
    TODO: Add sample profile
    TODO: Documentation on reading dropped text from STDIN
    TODO: Hide PROGRESS:XX and other bidirectional communications syntax from output text field

    * Now using bindings for defaults
    * Implemented UI stuff making clear that UTIs exclude suffixes
    * Fixed issue where a status menu could display an empty menu if clicked repeatedly
    * Use UTI methods instead of deprecated imageFileTypes
    * Fixed issue where dropping text on an app wouldn't work with “Remain running after initial execution” off
    * Symlinks now resolved when adding files to bundled files list
    * Folder sizes are now calculated much faster when adding to bundled files list
    * Arguments window now highlights arguments and argument groups in command preview field
    * New high resolution (1024x1024) application icons
    * Added ALERT:\.+ syntax, which triggers a modal alert dialog
    * Author name argument is now used to generate default bundle identifier in command line tool
    * Dropped text input (NSPboardText) is now passed to script via STDIN, not as an argument. This allows differentiation between dropped text snippets and dropped files in applications made to handle both.
    * Fixed issue with generating icon from images on retina macs (IconFamily)
    * Fixed issue with icon alpha channels (IconFamily)
    * Finder now refreshes display of overwritten applications
    * Better error handling in file operations
    * New retina icons in script type popup button