@@ -560,7 +560,7 @@ DQ
                                                 <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                                 <color key="backgroundColor" white="0.33333298560000002" alpha="1" colorSpace="calibratedWhite"/>
                                             </tableHeaderCell>
-                                            <imageCell key="dataCell" refusesFirstResponder="YES" alignment="left" animates="YES" imageScaling="proportionallyDown" image="BC5D607D-48A6-4260-990F-65F91CF4B85C" id="1249"/>
+                                            <imageCell key="dataCell" refusesFirstResponder="YES" alignment="left" animates="YES" imageScaling="proportionallyDown" image="4F3BFCC7-6023-43EC-A535-D0D0F001AC3A" id="1249"/>
                                         </tableColumn>
                                         <tableColumn identifier="2" editable="NO" width="559" minWidth="33.28857421875" maxWidth="2000" id="503">
                                             <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Bundled Files">
@@ -1288,7 +1288,7 @@ CA
                 </menuItem>
                 <menuItem title="Copy File Names" id="Xe7-Kg-aaN">
                     <connections>
-                        <action selector="copyFilename:" target="1234" id="Rpz-Vo-FC8"/>
+                        <action selector="copyFilenames:" target="1234" id="AoB-mM-KZb"/>
                     </connections>
                 </menuItem>
                 <menuItem title="Copy File Paths" id="dQk-4t-FvV">
@@ -2945,7 +2945,7 @@ Gw
         <userDefaultsController representsSharedInstance="YES" id="yij-LO-LNq"/>
     </objects>
     <resources>
-        <image name="BC5D607D-48A6-4260-990F-65F91CF4B85C" width="16" height="16">
+        <image name="4F3BFCC7-6023-43EC-A535-D0D0F001AC3A" width="16" height="16">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPT5YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQrLjE3OlUkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
