@@ -21,12 +21,13 @@ For 5.0
     TODO: Test UTI stuff
     TODO: Fix "Create app on script file change" feature
     TODO: Long GNU named params for command line tool, e.g. --some-option
-    TODO: Add example showing STATUSMENUICON: syntax in action
     TODO: Add documentation for ALERT:Title|Info syntax
     TODO: Add sample profile
     TODO: Documentation on reading dropped text from STDIN
     TODO: Hide PROGRESS:XX and other bidirectional communications syntax from output text field
 
+    * Added example showing STATUSMENUICON: syntax in action
+    * Migrated source to modern Objective-C syntax (literals, properties etc.)
     * Now using bindings for defaults
     * Implemented UI stuff making clear that UTIs exclude suffixes
     * Fixed issue where a status menu could display an empty menu if clicked repeatedly
